Change highlight color due to contrast issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
   --primary-color: #2f2a30; /* dark black hut */
   --secondary-color: #f2e9d5; /* Light beige sandy color */
   --tertiary-color: #0c5c59; /* Dark blue ocean color */
-  --highlight-color: #30bbb4; /* light blue ocean color */
+  --highlight-color: #207E7E; /* light blue ocean color */
 }
 
 /* Global styles */
